# stock-verify-system

./: .aicontext.json  .aider.conf.yml  .aiderignore  .autogpt.yml  .autopilot.json  .clinerules  .cursorrules  .devon.yml  .dockerignore  .eslintignore  .flake8  .gitignore  .gitmodules  .interpreter.yml  .markdownlint.json  .metagpt.yml  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  .swe-agent.yml  2.7.0  AUTOMATION_SUMMARY.md  ActivityFeedItem.tsx  Agent.md  BACKEND_CONNECTION_PARAMETERS.md  BARCODE_SEARCH_IMPROVEMENTS.md  BARCODE_SEARCH_VERIFICATION_REPORT.md  BATCH_MODE_IMPLEMENTATION.md  CODEBASE_AUDIT_REPORT.md  CODEBASE_ERRORS_REPORT.md  CODEBASE_ISSUES_REPORT.md  CODEOWNERS  COMPREHENSIVE_TEST_REPORT.md  CONSISTENCY_FIXES_SUMMARY.md  CONTRIBUTING.md  CURRENT_APP_REPORT.md  DEPLOYMENT_STATUS.md  DEPLOY_MANUAL.md  DEVELOPER_CHECKLIST.md  ENHANCEMENT_IMPLEMENTATION_PROGRESS.md  (+102 more)
backend/: .dockerignore  .env.docker.example  .env.example  .flake8  Dockerfile  api_mapping.py  backup.Dockerfile  config.py  db_mapping_config.py  debug_response_model.py  error_messages.py  exceptions.py  fix_typing.py  locustfile.py  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  seed_e2e.py  seed_sample_data.py  server.py  sql_server_connector.py
backend/api/: STOCK_VERIFY_2-db-maped.code-workspace  admin_control_api.py  admin_dashboard_api.py  auth.py  copilot_api.py  count_lines_api.py  dynamic_fields_api.py  dynamic_reports_api.py  enhanced_item_api.py  enrichment_api.py  enterprise_api.py  erp_api.py  error_reporting_api.py  exports_api.py  health.py  item_verification_api.py  legacy_routes.py  locations_api.py  logs_api.py  mapping_api.py  master_settings_api.py  metrics_api.py  notes_api.py  permissions_api.py  pin_auth_api.py  preferences_api.py  rack_api.py  realtime_dashboard_api.py  report_generation_api.py  reporting_api.py  reports_api.py  response_models.py  schemas.py  search_api.py  security_api.py  security_txt.py  self_diagnosis_api.py  service_logs_api.py  session_api.py  session_management_api.py  (+11 more)
backend/auth/: __init__.py  dependencies.py  jwt_provider.py  permissions.py
backend/core/: __init__.py  database.py  globals.py  lifespan.py  websocket_manager.py
backend/db/: __init__.py  indexes.py  initialization.py  migrations.py  runtime.py
backend/middleware/: __init__.py  compression_middleware.py  input_sanitization.py  lan_enforcement.py  logging_middleware.py  performance_middleware.py  rate_limit_middleware.py  request_id.py  request_size_limit.py  security.py  security_headers.py  setup.py
backend/models/: analytics.py  preferences.py  sync.py  user.py
backend/scripts/: add_performance_indexes.py  add_test_items.py  backfill_new_fields.py  barcode_analyzer.py  batch_condition_manager.py  check_barcode_continuity.py  check_barcode_lengths.py  check_databases.py  check_mongodb_items.py  check_other_barcode_columns.py  check_other_barcodes.py  check_sql_barcodes.py  check_sql_barcodes_v2.py  check_sql_duplicates.py  check_users.py  (+27 more)
(+12239 files in other folders)
